# JNIffmpegStaticPlay

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/jniffmpegstaticplay/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_channel.cpp  audio_channel.h  base_channel.cpp  base_channel.h  call_java_helper.cpp  call_java_helper.h  macro.h  native-lib.cpp  player_control.cpp  player_control.h  safe_queue.h  video_channel.cpp  video_channel.h
app/src/main/cpp/include/libavutil/: avutil.h
app/src/main/java/com/example/jniffmpegstaticplay/: AudioPlayer.java  JNIffPlayer.java  MainActivity.java  StaticPlayer.java
app/src/main/java/com/example/jniffmpegstaticplay/utils/: AppUtil.java  OLog.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/jniffmpegstaticplay/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
